feat: atualização de css

--- a/product-store/src/styles.scss
+++ b/product-store/src/styles.scss
@@ -2,3 +2,14 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+.container {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+.content-container{
+    max-width: 748px;
+    width: 100%;
+}
