--- a/product-store/src/app/shared/components/header/header.component.html
+++ b/product-store/src/app/shared/components/header/header.component.html
@@ -1,4 +1,8 @@
 
 <mat-toolbar>
-    <p>Gerenciador de Produtos</p>
+    <div class="container">
+        <div class="content-container">
+        <p class="center">Gerenciador de Produtos</p>
+        </div>
+    </div>
 </mat-toolbar>
