fix: corrigindo o tema do angular material

--- a/product-store/src/app/shared/components/header/header.component.html
+++ b/product-store/src/app/shared/components/header/header.component.html
@@ -1,5 +1,5 @@
 
-<mat-toolbar>
+<mat-toolbar color="primary">
     <div class="container">
         <div class="content-container">
         <p class="center">Gerenciador de Produtos</p>
